# pyspelling

./: .coveragerc  .gitignore  .pre-commit-hooks.yaml  .pyspelling.yml  .spelling.yml  .travis.yml  404.html  LICENSE  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  hatch_build.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini  zensical.yml
.github/: labels.yml
.github/workflows/: build.yml  deploy.yml  publish.yml  pullrequest.yml
about/changelog/: index.html
about/contributing/: index.html
about/development/: index.html
about/license/: index.html
api/: index.html
configuration/: index.html
docs/src/dictionary/: en-custom.txt
docs/src/markdown/: SUMMARY.md  api.md  changelog.md  configuration.md  contributing.md  development.md  filters.md  flowcontrol.md  index.md  license.md  parsers.md  pipeline.md
docs/src/markdown/_snippets/: links.md  links.txt
docs/src/markdown/about/: changelog.md  contributing.md  development.md  license.md
docs/src/markdown/filters/: context.md  cpp.md  html.md  javascript.md  markdown.md  odf.md  ooxml.md  python.md  stylesheets.md  text.md  url.md  xml.md
docs/src/markdown/flow_control/: README.md  wildcard.md
filters/context/: index.html
filters/cpp/: index.html
filters/html/: index.html
filters/javascript/: index.html
filters/markdown/: index.html
filters/odf/: index.html
filters/ooxml/: index.html
filters/python/: index.html
filters/stylesheets/: index.html
filters/text/: index.html
filters/url/: index.html
filters/xml/: index.html
flow_control/wildcard/: index.html
pipeline/: index.html
pyspelling/: __init__.py  __main__.py  __meta__.py  __version__.py  plugin.py  settings.py  util.py
pyspelling/filters/: __init__.py  context.py  context_filter.py  cpp.py  html.py  html_filter.py  ipynb.py  javascript.py  markdown.py  markdown_filter.py  msdocx.py  odf.py  ooxml.py  python.py  raw.py  stylesheets.py  text.py  url.py  xml.py
pyspelling/flow_control/: __init__.py  wildcard.py
pyspelling/parsers/: __init__.py  context_parser.py  html_parser.py  javascript_parser.py  markdown_parser.py  python_parser.py  raw_parser.py  text_parser.py
pyspelling/util/: __init__.py  css_selectors.py  git.py  soupsieve.py
pyspelling/util/soupsieve/: css_match.py
requirements/: docs.txt  project.txt  tests.txt
search/: search_index.json
tests/: test_config.py  test_css_selector.py  test_no_pipeline.py  test_soupsieve.py  test_versions.py  util.py
tests/filters/: __init__.py  test_context.py  test_cpp.py  test_html.py  test_ipynb.py  test_javascript.py  test_markdown.py  test_odf.py  test_ooxml.py  test_python.py  test_stylesheets.py  test_text.py  test_url.py  test_xml.py
tests/flow_control/: __init__.py  test_wildcard.py
tests/test_files/odf/: test.fodt  test.odp  test.ods  test.odt
tests/test_files/ooxml/: test.docx  test.pptx  test.xlsx
tools/: gh_labels.py
